<resources>
    <string name="app_name">64th ANC</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="watch_list">Watch List</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="keynotes">Keynotes</string>
    <string name="mater_classes">Mater Classes</string>
    <string name="seminars">Seminars</string>
    <string name="handshakes">Handshakes</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="workshops">Workshops</string>
    <string name="onspots">Onspots</string>
    <string name="culturals">Culturals</string>
    <string name="others">Others</string>
    <string name="food">Food</string>
    <string name="contact">Contact</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="home">Home</string>
</resources>