<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />



    </group>
    <item android:title="@string/events">
        <menu>
            <item
                android:id="@+id/nav_keynote"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/keynotes" />
            <item
                android:id="@+id/nav_masterclass"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/mater_classes" />

            <item
                android:id="@+id/nav_seminar"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/seminars" />
            <item
                android:id="@+id/nav_handshake"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/handshakes" />
            <item
                android:id="@+id/nav_exhibition"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/exhibitions" />
            <item
                android:id="@+id/nav_workshop"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/workshops" />
            <item
                android:id="@+id/nav_onspot"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/onspots" />
            <item
                android:id="@+id/nav_culturals"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/culturals" />

        </menu>

    </item>




    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_baseline_fastfood_24"
                android:title="@string/food" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/stat_sys_phone_call"
                android:title="@string/contact" />

        </menu>
    </item>

</menu>